@@ -34,3 +34,6 @@ IMPORTANT NOTE: HAD TO CHANGE THEIR MIDIVIEWIMPL TO USE INSTRUMENT - 1 OR WE GOT
 IMPORTANT NOTE: HAD TO COMMENT OUT ADDKEYLISTENER AND ADDMOUSELISTENER IN GUYVIEWIMPL TO ADD THEM PROPERLY
 
 Publicly gets the actual Concrete View this is bad...
+
+Added returnNote to NoteRep interfaces and the classes that implement it
+    Just returns the OurNote or the OurNote stored in Note
